tests/health/gold/sdk/tests__lsp__prefix_completion_test.toit.gold
tests/lsp/prefix_completion_test.toit:35:23: error: Unexpected token while parsing type
class F extends Klass.:
                      ^
tests/lsp/prefix_completion_test.toit:40:26: error: Unexpected token while parsing type
class G implements Inter.:
                         ^
tests/lsp/prefix_completion_test.toit:6:24: error: Unresolved interface
class A implements pre.foo:
                       ^~~
tests/lsp/prefix_completion_test.toit:15:25: error: Unresolved interface
class B implements glob.foo:
                        ^~~
tests/lsp/prefix_completion_test.toit:25:23: error: Unresolved super class
class D extends Klass.x:
                      ^
tests/lsp/prefix_completion_test.toit:30:26: error: Unresolved interface
class E implements Inter.y:
                         ^
<sdk>/core/numbers.toit:593:12: warning: Deprecated 'int.parse'
    return parse data 0 data.size --radix=radix --on_error=: throw it
           ^~~~~
<sdk>/core/numbers.toit:597:12: warning: Deprecated 'int.parse'
    return parse data from to --radix=radix --on_error=: throw it
           ^~~~~
<sdk>/core/numbers.toit:606:12: warning: Deprecated 'int.parse'
    return parse data 0 data.size --radix=radix --on_error=on_error
           ^~~~~
<sdk>/core/string.toit:327:14: warning: Deprecated 'int.parse'
        : int.parse format start (pos - 1) --radix=10 --on_error=: throw it
             ^
